[metadata]
name = django_advance_thumbnail
version = 1.0.0
description = A Django app that automates thumbnail creation for image fields.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itsmahadi007/django_advance_thumbnail
author = Mahadi Hassan
author_email = mh@mahadihassan.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0
    Pillow >= 8.0.0
